--- a/style.css
+++ b/style.css
@@ -206,3 +206,91 @@ body{
     background-size:cover;
     background-repeat: no-repeat;
 }
+
+h4{
+    margin-top: 200px;
+    text-align: center;
+    color: rgb(231, 198, 14);
+    font-size: 20px;
+}
+
+h1{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 1000;
+}
+
+.hotel-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap:20px;
+    height: 400px;
+    margin: 200px 0 200px 0;
+}
+
+.hotel-card{
+    position: relative;
+    border: 1px solid grey;
+    overflow:hidden;
+    background-color: white;
+    transition: transform 0.3s ease;
+}
+
+.hotel-card img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.card-text {
+    position: absolute;
+    bottom: 30px;
+    left: 10px;
+    color: white;
+    font-size: 1.2rem;
+    padding: 5px 10px;
+    transition: all 0.3s ease;
+}
+
+.price {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    color: white;
+    font-size: 1.2rem;
+    padding: 5px 10px;
+    transition: all 0.3s ease;
+}
+
+/* .book-now-hotel{
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color:white;
+    color: black;
+    padding: 10px 20px;
+    font-weight: bold;
+    transition: all 0.3s ease;
+    opacity:0;
+} */
+
+
+.hotel-card:hover{
+    transform: translateY(-5px);
+
+}
+
+.hotel-card:hover img{
+    transform: scale(1.1);
+}
+
+.hotel-card:hover .card-text{
+    bottom: 80px;
+}
+
+.hotel-card .book-now-hotel{
+    /* bottom: 20px; */
+    opacity: 1;
+}
