--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ body{
     font-size: 60px;
     font-weight: bold;
     color: white;
+    text-align: center;
 }
 
 .booking-form{
@@ -169,6 +170,7 @@ body{
 .text h5{
     color: rgb(196, 168, 14);
     font-size: 20px;
+    
 }
 
 .text h3{
@@ -185,17 +187,22 @@ body{
 .facility{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin: 200px 100px 100px 200px;
+    gap: 30px;
     
 }
 
 .facility-card{
-    width: 50%;
+    width: 350px;
 }
 
 .facility-card p{
     color: grey;
+}
+
+.facility h1{
+    font-size: 20px;
 }
 
 .background{
@@ -207,14 +214,14 @@ body{
     background-repeat: no-repeat;
 }
 
-h4{
-    margin-top: 200px;
+.our-rooms-page h4{
+    margin-top: 100px;
     text-align: center;
     color: rgb(231, 198, 14);
     font-size: 20px;
 }
 
-h1{
+.our-rooms-page h1{
     text-align: center;
     font-size: 40px;
     font-weight: 1000;
@@ -225,7 +232,7 @@ h1{
     grid-template-columns: repeat(4,1fr);
     gap:20px;
     height: 400px;
-    margin: 200px 0 200px 0;
+    margin: 0 0 100px 0;
 }
 
 .hotel-card{
@@ -293,4 +300,97 @@ h1{
 .hotel-card .book-now-hotel{
     /* bottom: 20px; */
     opacity: 1;
+}
+
+.explore-more{
+    display: flex;
+    margin: 0 150px 50px 200px;
+    justify-content: space-between;
+}
+
+.explore-more h1{
+    font-size: 20px;
+}
+
+.explore-button{
+    padding: 15px 20px;
+    background-color: rgb(207, 150, 19);
+    color: white;
+    font-weight: bold;
+    border: none;
+    text-align: center;
+}
+
+.Testimonials{
+    display: flex;
+    justify-content: space-between;
+    margin: 150px;
+}
+.Testimonials-text{
+    margin: 0 0 0 50px;
+}
+
+.Testimonials-text h4,h1{
+    text-align: left;
+    margin-top: 15px;
+
+}
+
+.Testimonials-text h4{
+    font-size: 15px;
+}
+
+.Testimonials-text h1{
+    font-size: 30px;
+}
+ .moving-part{
+    border: 1px solid green;
+    width: 100%;
+    height: 300px;
+ }
+
+ .background-choose{
+    position: relative;
+    background-image: url(https://up.yimg.com/ib/th?id=OIP.bTvxB52hX-HMV3D4OMy56gHaEJ&pid=Api&rs=1&c=1&qlt=95&w=196&h=109);
+    background-repeat: none;
+    background-size:cover;
+    background-position: center;
+    margin-bottom: 200px;
+    height: 350px; 
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.choose-container{
+    width: 100%;
+    height: 100%;
+    padding-top: 60px;
+    
+}
+
+.choose-container h5{
+    text-align: center;
+    color: rgb(231, 186, 5);
+    font-weight: bold;
+}
+
+.choose-container h1{
+    text-align: center;
+    color: white;
+}
+
+.choose-button{
+    padding: 20px;
+    border:none;
+    padding:10px 20px ; 
+    background-color: white;
+}
+
+.blog{
+    display: flex;
+    justify-content: space-between;
 }
